Add --add-opens.